Fix license declartaion in pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,10 +3,11 @@ name = "streamlit-gettext"
 version = "0.0.1"
 description = "A Streamlit extension for easy localization of your apps"
 authors = [{name = "insolor", email = "insolor@gmail.com"}]
-license = "MIT"
 readme = "README.md"
+license = { file = "LICENSE" }
 keywords = ["streamlit", "gettext", "i18n"]
 classifiers = [
+    "License :: OSI Approved :: MIT License",
     "Development Status :: 3 - Alpha",
     "Operating System :: OS Independent",
     "License :: OSI Approved :: MIT License",
