--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,7 +56,7 @@ ignore = [
     "S311",
 ]
 
-"tests/*" = [
+"example/tests/*" = [
     "S101",  # Don't warn about using of asserts in tests
     "ANN201",  # Ignore "Missing return type annotation for public function", tests don't return anything
     "D",  # Don't warn about missing documentation in tests
