--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -11,7 +11,7 @@ updates:
           - "ruff"
           - "coverage"
   
-  - package-ecosystem: "pip example"
+  - package-ecosystem: "pip"
     directory: "/example"
     schedule:
       interval: "monthly"
