--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -27,6 +27,6 @@ updates:
     schedule:
       interval: "monthly"
     groups:
-      all:
+      github-actions:
         patterns:
           - "*"
