--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,14 @@ repository = "https://github.com/insolor/streamlit-gettext"
 dev = [
     "ruff>=0.8.2",
 ]
+docs = [
+    "mkdocs>=1.6.1",
+    "mkdocs-git-revision-date-localized-plugin>=1.4.1",
+    "mkdocs-material>=9.6.7",
+    "mkdocs-minify-plugin>=0.8.0",
+    "mkdocs-redirects>=1.2.2",
+    "mkdocs-static-i18n>=1.3.0",
+]
 
 [tool.ruff]
 target-version = "py39"
