--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,8 @@ docs = [
     "mkdocs-minify-plugin>=0.8.0",
     "mkdocs-redirects>=1.2.2",
     "mkdocs-static-i18n>=1.3.0",
+    "mkdocstrings>=0.30.0",
+    "mkdocstrings-python>=1.16.12",
 ]
 
 [tool.ruff]
