--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -43,8 +43,8 @@ jobs:
 
     - name: Install dependencies
       run: |
-        uv venv --python ${{ matrix.python-version }}
-        uv pip install -e .
+        uv sync
+        uv run python -V
 
     - name: Lint with ruff
       run: |
