--- a/.github/workflows/pypi-deploy.yml
+++ b/.github/workflows/pypi-deploy.yml
@@ -15,9 +15,9 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Install uv
-      uses: astral-sh/setup-uv@v6.4.3
+      uses: astral-sh/setup-uv@v6
       with:
-        version: "latest"
+        version: latest
 
     - name: Build packages
       run: uv build
