Add mkdocs group

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -22,6 +22,9 @@ updates:
           - "pytest*"
           - "ruff"
           - "coverage"
+      mkdocs:
+        patterns:
+          - "mkdocs*"
 
   - package-ecosystem: "github-actions"
     directory: "/"
