Fix docs deployment

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -21,8 +21,5 @@ jobs:
       - name: Setup uv
         uses: astral-sh/setup-uv@v7
 
-      - name: Install docs dependencies
-        run: uv sync --only-group docs
-
       - name: Deploy docs
-        run: uv run mkdocs gh-deploy --force
+        run: uv run --no-install-project --only-group docs mkdocs gh-deploy --force
