Remove non-existent --no-install-project option

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -22,4 +22,4 @@ jobs:
         uses: astral-sh/setup-uv@v7
 
       - name: Deploy docs
-        run: uv run --no-install-project --only-group docs mkdocs gh-deploy --force
+        run: uv run --only-group docs mkdocs gh-deploy --force
